Add main PHP file. Still a stub

--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
         "pear/archive_tar": "^1.4",
         "squizlabs/php_codesniffer": "^2.7",
         "apigen/apigen": "^4.1"
+    },
+    "autoload": {
+        "psr-4": {
+            "AmeenRoss\\MagentoPackager\\": ["src"]
+        }
     }
 }
