--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "php": "^5.4.0|^7.0.0",
         "pear/archive_tar": "^1.4",
         "squizlabs/php_codesniffer": "^2.7",
         "apigen/apigen": "^4.1"
