No need to add dependencies used for developing in production

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "require": {
         "php": "^5.4.0|^7.0.0",
-        "pear/archive_tar": "^1.4",
+        "pear/archive_tar": "^1.4"
+    },
+    "require-dev": {
         "squizlabs/php_codesniffer": "^2.7",
         "apigen/apigen": "^4.1"
     },
@@ -19,5 +21,6 @@
         "psr-4": {
             "AmeenRoss\\MagentoPackager\\": ["src"]
         }
-    }
+    },
+    "bin": ["bin/magepkg"],
 }
